# dunderchan

./: .env  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  run-dev.sh  run-prod.sh
.github/workflows/: docker-build.yml
app/: config.py  main.py  models.py
app/static/: styles.css
app/templates/: _base.jinja2  index.jinja2  posts.jinja2  thread.jinja2
static/: styles.css
templates/: base.html  base.jinja2  index.html  index.jinja2  thread.html  thread.jinja2
