[tool.poetry]
name = "dunderchan"
version = "0.0.1"
description = "A dumb message board"
authors = ["Ben Aaron <ben@theaarons.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi-htmx = "^0.2.1"
uvicorn = "^0.23.2"
python-multipart = "^0.0.6"
databases = {extras = ["aiosqlite"], version = "^0.7.0"}

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
mypy = "^1.5.1"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
